<resources>
    <string name="app_name">InternetShop</string>
    <string name="createAcc">Создайте аккаунт</string>
    <string name="input_login">Введите логин</string>
    <string name="input_email">Введите email</string>
    <string name="input_password">Введите пароль</string>
    <string name="buttonReg">Регистрация</string>
    <string name="authAcc">Войдите в аккаунт</string>
    <string name="buttonAuth">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="authText">Войти в аккаунт</string>
    <string name="items">Товары</string>
    <string name="ViewButton">Посмотреть</string>
    <string name="PayButton">Купить</string>
    <string name="DescTitle">Описание товара:</string>
    <string name="ButtonBack">Назад</string>
    <string name="Cart">Корзина</string>
    <string name="main_title_icon">главная страница</string>
    <string name="order_title_icon">Заказы</string>
    <string name="sum_order">Заказ на сумму:</string>
</resources>