<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/createAcc"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"

        android:layout_gravity="center"
        android:textColorHint="@color/hint"
        android:textColor="@color/text"
        android:hint="@string/input_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColorHint="@color/hint"
        android:textColor="@color/text"
        android:hint="@string/input_email" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColorHint="@color/hint"
        android:textColor="@color/text"
        android:hint="@string/input_password" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonReg"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

</LinearLayout>