<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgYellow"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/authAcc"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"

        android:hint="@string/input_login"
        android:inputType="text"
        android:textColor="@color/text"
        android:textColorHint="@color/hint" />


    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textColorHint="@color/hint" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/buttonAuth"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/reg"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
