<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/green"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:layout_gravity="bottom"
    >

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/home"
        android:contentDescription="@string/main_title_icon"
        app:tint="@color/white"
        />


    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/cart_icon_bottom"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/Cart"
            app:srcCompat="@drawable/ic_cart"
            app:tint="@color/white"
            />

        <TextView
            android:id="@+id/cart_count_bottom"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@id/cart_icon_bottom"
            android:layout_alignEnd="@id/cart_icon_bottom"
            android:background="@drawable/circle_bg"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <ImageView
        android:id="@+id/order_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/order"
        android:contentDescription="@string/order_title_icon"
        app:tint="@color/white"
        />
</LinearLayout>